# payment-receipt-generator

./: README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/app/controller/: controller.py
backend/app/models/: pdf_data.py  session_data.py
backend/app/routes/: receipt_gen_routes.py
backend/app/schemas/: responses.py
backend/app/services/: compression.py  data_ingestion.py  directory_management.py  pdf_generation.py
desktop/: launcher.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: base.css  main.css
