[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "fpdf2>=2.8.7",
    "gitignore>=0.0.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pywebview>=5.4",
    "uvicorn>=0.41.0",
]
